tests/baselines/reference/interfaceExtendingClassWithPrivates.errors.txt
==== tests/cases/compiler/interfaceExtendingClassWithPrivates.ts (2 errors) ====
    class Foo {
        private x: string;
    }
    
    interface I extends Foo { // error
              ~
!!! interfaceExtendingClassWithPrivates.ts(5,11): error TS2142: Interface 'I' cannot extend class 'Foo':
!!! 	Property 'x' defined as public in type 'I' is defined as private in type 'Foo'.
        x: string;
    }
    
    interface I2 extends Foo {
        y: string;
    }
    
    var i: I2;
    var r = i.y;
    var r2 = i.x; // error
               ~
!!! interfaceExtendingClassWithPrivates.ts(15,12): error TS2107: 'Foo.x' is inaccessible.